// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav component shows login link when logged out 1`] = `
<nav
  className="Nav"
>
  <ul>
    <li>
      <Link
        replace={false}
        to="/login"
      >
        Log In
      </Link>
    </li>
    <li>
      <Link
        replace={false}
        to="/signup"
      >
        Sign Up
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`Nav component shows logout link when logged in 1`] = `
<nav
  className="Nav"
>
  <ul>
    <li>
      <button
        id="logoutBtn"
      >
        Log Out
      </button>
    </li>
  </ul>
</nav>
`;
